--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.mjs",
+  "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.mjs"
+    "dev": "nodemon server.mjs"
   },
   "author": "",
   "license": "ISC",
