--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.mjs"
+    "dev": "nodemon ./backend/server.mjs"
   },
   "author": "",
   "license": "ISC",
